fixat touch och animations

--- a/app/partials/dayView/day.html
+++ b/app/partials/dayView/day.html
@@ -1,6 +1,6 @@
-<div id="day" ng-app="morningRoutine">
+<div class="page" id="day" ng-app="morningRoutine">
   <ng-include src="'partials/navbar/navbar.html'"></ng-include>
-  <div ng-controller="dayCtrl">
+  <div ng-controller="dayCtrl" ng-swipe-left="nextPage()" ng-swipe-right="prevPage()">
     <h1>Hello! I'm day!</h1>
     <a id="yesterday" class="btn" data-ng-click="changeDay($event)" href="#day/{{user}}/{{thisDate}}">Yesterday</a>
     <a id="today" class="btn" data-ng-click="changeDay($event)" href="#day/{{user}}/{{thisDate}}">Today</a>
