--- a/app/partials/loginView/login.html
+++ b/app/partials/loginView/login.html
@@ -1,4 +1,4 @@
-<div id="stats" ng-app="morningRoutine">
+<div class="page" id="stats" ng-app="morningRoutine">
   <div ng-controller="statsCtrl">
     <h1>This is bullshit login/landing page!</h1>
     <input type="text" name="" value="" placeholder="Heheh, doesn't matter what you write here, hehe">
