--- a/app/partials/statsView/stats.html
+++ b/app/partials/statsView/stats.html
@@ -1,4 +1,4 @@
-<div id="stats" ng-app="morningRoutine">
+<div class="page" id="stats" ng-app="morningRoutine" ng-swipe-left="nextPage()" ng-swipe-right="prevPage()">
   <ng-include src="'partials/navbar/navbar.html'"></ng-include>
   <div ng-controller="statsCtrl">
     <h1>Hello! I'm stats!</h1>
